--- a/package.json
+++ b/package.json
@@ -22,16 +22,25 @@
     "url": "https://github.com/alexspirgel/no-scroll/issues"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack"
+    "start": "concurrently \"webpack\" \"gulp\""
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
+    "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
+    "gulp-notify": "^4.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "sass": "^1.63.6",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
     "@alexspirgel/extend": "^4.0.0",
+    "@alexspirgel/is-element": "^1.0.4",
     "@alexspirgel/is-plain-object": "^1.0.6"
   }
 }
